--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,32 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:15.12-browsers
-      - image: circleci/ruby:2.5
-    working_directory: ~/search-gov-website
+      - image: circleci/ruby:2.7-node
     steps:
       - checkout
-      - run: gem install bundler
-      - run: bundle exec jekyll build
-      - run: npm install
-      - run: sudo npm install -g @lhci/cli@0.8.x
-      - run: lhci autorun
+      - restore_cache:
+          keys:
+          # NOTE: remove space between { { here and in all below examples
+          - v1-dependencies-bundler-{ { checksum "Gemfile.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-bundler-
+      - run: 
+          name: Bundle install dependencies
+          command: |
+            bundle config set path 'vendor/bundle'
+            bundle install --jobs=4 --retry=3
+      - save_cache:
+          paths:
+            - vendor/bundle
+          key: v1-dependencies-bundler-{ { checksum "Gemfile.lock" }}
+      - restore_cache:
+            keys:
+            - v1-dependencies-npm-{ { checksum "package-lock.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-npm-
+        - run: npm install
+        - save_cache:
+            paths:
+              - node_modules
+            key: v1-dependencies-npm-{ { checksum "package-lock.json" }}
+        - run: bundle exec jekyll build
