--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           key: v1-dependencies-npm-{ { checksum "package-lock.json" }}
       - run: bundle exec jekyll build
       - run: sudo npm install -g @lhci/cli@0.8.x
-      - run: lhci autorun
+      - run: |
+          lhci autorun
         env:
             LHCI_GITHUB_APP_TOKEN: Lqao2rRcOFy2RM:18685990:Ma81aUH8N3
