See if chrome check passes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,4 @@ jobs:
           key: v1-dependencies-npm-{ { checksum "package-lock.json" }}
       - run: bundle exec jekyll build
       - run: sudo npm install -g @lhci/cli@0.8.x
-      - run: |
-          lhci autorun
-        env:
-            LHCI_GITHUB_APP_TOKEN: Lqao2rRcOFy2RM:18685990:Ma81aUH8N3
+      - run: lhci autorun
